[package]
name = "sapling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = { version = "1", default-features = false }
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
comrak = "0.15"
rocket = "0.5.0-rc.2"
tokio = { version = "1", features = ["full"] }
lightningcss = "1.0.0-alpha.38"
clap = "4.0.32"
