[package]
name = "sapling"
version = "0.1.0"
edition = "2021"

# see more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = { version = "1", default-features = false }
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
comrak = "0.15"
tokio = { version = "1", features = ["full"] }
lightningcss = "1.0.0-alpha.38"
clap = "4.0.32"
ctrlc = "3.2.4"
env_logger = "0.10.0"
once_cell = "1.17.0"
notify = "5.1.0"
log = "0.4.17"
axum = "0.6.4"
tower-livereload = "0.7.2"
tower-http = { version = "0.3.5", features = ["fs","trace"] }
tower = "0.4.13"
futures = "0.3.30"
rss-gen = "0.0.3"
